--- a/Furnicome/css/sign-up.css
+++ b/Furnicome/css/sign-up.css
@@ -26,7 +26,9 @@ form{
     max-width: 1150px;
     background: #fff;
     text-align: center;
-    padding: 20px 10px;
+    padding: 20px 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     box-shadow: 0 5px 10px rgba(71, 3, 6, 0.7);
 }
 
@@ -41,22 +43,63 @@ form .title{
 form label{
     align-items: center;
     justify-content: center;
-    margin-bottom: 75px;
-    margin-left: 120px;
-    margin-right: 20px;
+    margin-bottom: 50px;
+    margin-left: 49.5px;
+    margin-right: 30px;
 }
 
 form .label2{
     margin-bottom: 50px;
+    
 
 }
 form label input.largo{
     color: #252525;
-
      border-bottom: solid 1px  #D1B7A1;
      padding: 0 15px;
-     font-size: 18px;
+     font-size: 13px;
+    
+     margin-bottom: 50px;
  }
+
+ @media only screen and (max-width: 576px) {
+    .form{
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+    } 
+
+    .user-detail{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .form label{
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 50px;
+        margin-left: 70px;
+        margin-right: 30px;
+    }
+
+    form{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        max-width: 1150px;
+        background: #fff;
+        text-align: center;
+        padding: 20px 20px;
+        margin-right: 10px;
+        margin-left: 10px;
+        box-shadow: 0 5px 10px rgba(71, 3, 6, 0.7);
+    }
+}
 
 form label input{
    outline: none;
@@ -83,7 +126,6 @@ form .link{
     outline: #252525;
     color: black;
     border: none;
-    
     background: linear-gradient(to right, #D1B7A1, #D1B7A1);
     padding: 10px 15px;
     cursor: pointer;
@@ -91,12 +133,18 @@ form .link{
 
 .container form .user-detail{
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 .container form .user-detail2{
-    display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
+
+.form-check{
+    margin-bottom: 20px;
+}
+
