--- a/Furnicome/css/estilo.css
+++ b/Furnicome/css/estilo.css
@@ -45,6 +45,13 @@ footer {
     color: black;
 }
 
+.card-footer .btn{
+    background-color: #9E8671;
+    align-items: center !important;
+    justify-content: center;
+
+}
+
 #card-product {
     background-color: #FAF5F0;
 }
@@ -128,3 +135,41 @@ form button {
     padding: 10px 15px;
     cursor: pointer;
 }
+
+.container .estrellas{
+    align-items: center;
+    justify-content: center;
+    color: rgba(233, 233, 7, 0.911);
+    padding: .5rem 0;
+}
+
+#filtros{
+    max-height: 630px;
+    max-width: 350px;
+    margin-top: 170px;
+    background-color: #FAF5F0;
+    margin-left: 30px;
+    border-radius: 20px;
+
+}
+
+.form-check{
+    margin-left: 20px;
+}
+
+.tt1,.pp{
+    margin-top: 20px;
+    margin-left: 20px;
+    font-weight: bold;
+}
+
+
+a{
+    color: black !important;
+}
+
+@media only screen and (max-width: 1159px) {
+    #filtros{
+        max-height: 700px;
+    }
+    }
