--- a/Furnicome/css/sign-up.css
+++ b/Furnicome/css/sign-up.css
@@ -28,7 +28,8 @@ form {
     text-align: center;
     padding: 20px 20px;
     margin-right: 10px;
-    margin-left: 10px;
+    margin-left: 50px;
+    margin-top: 70px;
     box-shadow: 0 5px 10px rgba(71, 3, 6, 0.7);
 }
 
