--- a/views/private/index.html
+++ b/views/private/index.html
@@ -33,9 +33,9 @@
     </div>
     <!-- Contenedor del formulario para registrar el primer usuario del sitio privado -->
     </div>
-    <script type="text/javascript" src="../recursos/js/sweetalert.min.js"></script>
-    <script type="text/javascript" src="../controllers/components.js"></script>
-    <script type="text/javascript" src="../controllers/dashboard/index.js"></script>
-    <script type="text/javascript" src="../controllers/dashboard/account.js"></script>
+    <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/components.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/index.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
 </body>
 </html>
