--- a/views/private/index.html
+++ b/views/private/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,13 @@
     <link rel="stylesheet" href="../../resources/css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body class="D1">
-    <div class="hide" id="login-container-div">
+    <div class="visually-hidden" id="login-container-div">
         <form method="post" id="login-form">
             <div>
                 <h1 class="title">Private Login</h1>
@@ -31,11 +35,91 @@
             <a href="#" class="link">¿Olvidaste tu contraseña?</a>
         </form>
     </div>
+    <div>
+        <div class="visually-hidden" id="signup-container-div">
+            <form method="post" id="signup-form">
+                <div>
+                    <div>
+                        <h1 class="title">Registrate</h1>
+                    </div>
+                    <div class="user-detail">
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../../recursos/iconos/user.png" alt="" width="16px" height="16px">
+                                <input type="text" placeholder="Nombre" id="nombres" name="nombres" class="validate"
+                                    required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../../recursos/iconos/user.png" alt="" width="16px" height="16px">
+                                <input type="text" placeholder="Apellido" id="apellidos" name="apellidos"
+                                    class="validate" required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../../recursos/iconos/user.png" alt="" width="16px" height="16px">
+                                <input type="text" placeholder="alias" id="usuario" name="usuario" class="validate"
+                                    required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../../recursos/iconos/lock.png" alt="" width="13px" height="16px">
+                                <input type="text" placeholder="Clave" id="codigo" name="codigo" class="validate"
+                                    required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../../recursos/iconos/confirmar.png" alt="" width="16px" height="16px">
+                                <input type="text" placeholder="Confirmar clave" id="confirmar" name="confirmar"
+                                    class="validate" required>
+                            </div>
+                        </label>
+                    </div>
+                    <div class="user-detail2">
+                        <label for="" class="label2">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../../recursos/iconos/correo.png" alt="" width="16px" height="16px">
+                                <input id="correo" class="largo" type="text" placeholder="Correo" name="correo"
+                                    class="validate" required>
+                            </div>
+                        </label>
+                        <div class="button" id="button">
+                            <a href="">
+                                <button class="button" input type="submit" value="Registrar">Registrar</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
     <!-- Contenedor del formulario para registrar el primer usuario del sitio privado -->
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="../../controllers/components.js"></script>
     <script type="text/javascript" src="../../controllers/dashboard/index.js"></script>
     <script type="text/javascript" src="../../controllers/dashboard/account2.js"></script>
 </body>
+
 </html>
