no se la verdad pero ekis

--- a/views/private/main.html
+++ b/views/private/main.html
@@ -35,7 +35,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <!-- Navbar brand -->
                         <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                            <img src="../recursos/FURNICOM.png" height="60" alt="Furnicom logo" loading="lazy" />
+                            <img src="../../recursos/FURNICOM.png" height="60" alt="Furnicom logo" loading="lazy" />
                         </a>
                         <!-- Left links -->
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -52,14 +52,11 @@
                                 <a class="nav-link" href="../private/agregar_productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../public/about_us.html">Sobre nosotros</a>
+                                <a class="nav-link" href="../private/agregar_usuarios.html">Usuarios</a>
                             </li>
                         </ul>
                         <!-- Left links -->
                     </div>
-                    <!-- Collapsible wrapper -->
-
-                    <!-- Right elements -->
                     <div class="d-flex align-items-center">
                         <!-- Icon -->
 
@@ -77,7 +74,7 @@
                             <a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#"
                                 id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle"
+                                <img src="../../recursos/iconos/user.png" class="rounded-circle"
                                     height="25" alt="Black and White Portrait of a Man" loading="lazy" />
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
@@ -100,7 +97,7 @@
             </nav>
 
             <!-- Background image -->
-            <div class="p-5  bg-image" style="background-image: url('../recursos/repisa2.jpg');height: 700px;">
+            <div class="p-5  bg-image" style="background-image: url('../../recursos/repisa2.jpg');height: 700px;">
 
                 <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
                     <div class="d-flex justify-content-center align-items-center h-100">
