--- a/views/private/agregar_categorias.html
+++ b/views/private/agregar_categorias.html
@@ -56,7 +56,7 @@
                             <a class="nav-link" href="../private/agregar_productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../public/about_us.html">Sobre nosotros</a>
+                            <a class="nav-link" href="../private/agregar_usuarios.html">Usuarios</a>
                         </li>
                     </ul>
                     <!-- Left links -->
