account inyectando main y categorias
inyecta el footer y el header, tambien tienen logout

--- a/resources/css/estilo.css
+++ b/resources/css/estilo.css
@@ -85,7 +85,7 @@ footer {
 }
 
 
-form {
+#login-form{
     display: flex;
     flex-direction: column;
     background: #fff;
@@ -94,7 +94,14 @@ form {
     box-shadow: 0 5px 10px rgba(71, 3, 6, 0.7);
 }
 
-
+#signup-form{
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    text-align: center;
+    padding: 40px 45px;
+    box-shadow: 0 5px 10px rgba(71, 3, 6, 0.7);
+}
 
 form .title {
     color: #252525;
