--- a/views/private/agregar_usuarios.html
+++ b/views/private/agregar_usuarios.html
@@ -108,7 +108,7 @@
             <div class="container">
                 <H4>Agregar Usuarios</H4>
                 <form method="post" id="save-form">
-                    <input class="visually-hidden" type="number" id="id_usuario" name="id_usuario">
+                    <input class="visually-hidden" type="number" id="id" name="id">
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Nombre:</label>
                         <input type="text" class="form-control" id="nombre" name="nombre" required>
