--- a/views/private/index.html
+++ b/views/private/index.html
@@ -16,7 +16,7 @@
 
 <body class="D1">
     <div class="visually-hidden" id="login-container-div">
-        <form method="post" id="login-form">
+        <form  method="post" id="login-form">
             <div>
                 <h1 class="title">Private Login</h1>
             </div>
@@ -32,7 +32,6 @@
                 <button class="button tooltipped" input type="submit" value="Registrar" data-tooltip="Ingresar">iniciar
                     sesión</button>
             </a>
-            <a href="#" class="link">¿Olvidaste tu contraseña?</a>
         </form>
     </div>
     <div>
@@ -71,7 +70,7 @@
                             <div class="input-box">
                                 <span class="details"></span>
                                 <img src="../../recursos/iconos/lock.png" alt="" width="13px" height="16px">
-                                <input type="text" placeholder="Clave" id="codigo" name="codigo" class="validate"
+                                <input type="password" placeholder="Clave" id="codigo" name="codigo" class="validate"
                                     required>
                             </div>
                         </label>
@@ -79,7 +78,7 @@
                             <div class="input-box">
                                 <span class="details"></span>
                                 <img src="../../recursos/iconos/confirmar.png" alt="" width="16px" height="16px">
-                                <input type="text" placeholder="Confirmar clave" id="confirmar" name="confirmar"
+                                <input type="password" placeholder="Confirmar clave" id="confirmar" name="confirmar"
                                     class="validate" required>
                             </div>
                         </label>
@@ -119,7 +118,7 @@
     <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="../../controllers/components.js"></script>
     <script type="text/javascript" src="../../controllers/dashboard/index.js"></script>
-    <script type="text/javascript" src="../../controllers/dashboard/account2.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
 </body>
 
 </html>
