--- a/views/private/agregar_categorias.html
+++ b/views/private/agregar_categorias.html
@@ -35,11 +35,11 @@
         <div class="container">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-mdb-toggle="modal" data-mdb-target=".exampleModal">
-                Launch demo modal
+                Ingresar categoría
             </button>
 
             <!-- Modal -->
-            <div class="modal exampleModal" id="save-form" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal exampleModal" id="save-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -50,6 +50,7 @@
                         </div>
                         <div class="modal-body">
                             <form id="save-form">
+                                <input class="visually-hidden" type="number" id="id" name="id">
                                 <div class="mb-3">
                                     <label for="recipient-name" class="col-form-label">Nombre:</label>
                                     <input type="text" class="validate" id="nombre" name="nombre" required>
@@ -66,12 +67,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
         </div>
         <br>
         <div class="container">
@@ -86,6 +81,7 @@
                     </tr>
                 </thead>
                 <tbody id="tbody-rows">
+                    
                 </tbody>
             </table>
         </div>
