--- a/views/private/main.html
+++ b/views/private/main.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../../resources/css/estilo.css">
     <title>Furnicome</title>
 </head>
 
@@ -23,17 +23,17 @@
         </header>
 
         <section>
-      <!-- Título del contenido principal -->
-      <h3 class="center-align">Bienvenido</h3>
-      <!-- Se muestra un saludo según la hora del cliente -->
-      <div class="row">
-          <h4 class="center-align blue-text" id="greeting"></h4>
-      </div>
+            <!-- Título del contenido principal -->
+            <h3 class="center-align">Bienvenido</h3>
+            <!-- Se muestra un saludo según la hora del cliente -->
+            <div class="row">
+                <h4 class="center-align blue-text" id="greeting"></h4>
+            </div>
         </section>
 
         <br>
         <div class="container-fluid">
-            <img src="../recursos/grafico.png" class="rounded mx-auto d-block" alt="..." width="550" height="400">
+            <img src="../../recursos/grafico.png" class="rounded mx-auto d-block" alt="..." width="550" height="400">
         </div>
 
 
@@ -44,18 +44,17 @@
             </footer>
         </div>
 
-        
+
         <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-            <!-- Option 1: Bootstrap Bundle with Popper -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-            <script type="text/javascript" src="../controllers/dashboard/main.js"></script>
-            <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
-            <script type="text/javascript" src="../../controllers/components.js"></script>
-            <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
+        <script type="text/javascript" src="../controllers/dashboard/main.js"></script>
+        <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
+        <script type="text/javascript" src="../../controllers/components.js"></script>
+        <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
 
     </body>
 </main>
