--- a/views/private/agregar_usuarios.html
+++ b/views/private/agregar_usuarios.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../resources/css/estilo.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
 
     <title>Furnicome</title>
 </head>
@@ -18,12 +19,6 @@
 
 <body>
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 
     <header>
         <!-- Navbar -->
@@ -104,64 +99,66 @@
 
 
     <section>
-
-
-
         <div class="container">
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
-                Launch demo modal
-            </button>
 
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                            <button type="button" class="btn-close" data-mdb-dismiss="modal"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form method="post" id="save-form">
-                                <input class="visually-hidden" type="number" id="id_usuario" name="id_usuario">
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
+            Agregar Usuarios
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Usuarios</h5>
+                        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form method="post" id="save-form">
+                            <input class="visually-hidden" type="number" id="id_usuario" name="id_usuario">
+                            <div class="mb-3">
+                                <label for="recipient-name" class="col-form-label">Nombre:</label>
+                                <input type="text" class="form-control" id="nombre" name="nombre" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="message-text" class="col-form-label">Apellido:</label>
+                                <input type="text" class="form-control" id="apellido" name="apellido" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="message-text" class="col-form-label">Correo:</label>
+                                <input type="text" class="form-control" id="correo" name="correo" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="message-text" class="col-form-label">Alias:</label>
+                                <input type="text" class="form-control" id="alias" name="alias" required>
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Nombre:</label>
-                                    <input type="text" class="form-control" id="nombre" name="nombre" required>
+                                    <label for="message-text" class="col-form-label">Clave:</label>
+                                    <input type="password" class="form-control" id="clave" name="clave" required>
                                 </div>
-                                <div class="mb-3">
-                                    <label for="message-text" class="col-form-label">Apellido:</label>
-                                    <input type="text" class="form-control" id="apellido" name="apellido" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="message-text" class="col-form-label">Correo:</label>
-                                    <input type="text" class="form-control" id="correo" name="correo" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="message-text" class="col-form-label">Alias:</label>
-                                    <input type="text" class="form-control" id="alias" name="alias" required>
-                                    <div class="mb-3">
-                                        <label for="message-text" class="col-form-label">Clave:</label>
-                                        <input type="password" class="form-control" id="clave" name="clave" required>
-                                    </div>
-                                    <button type="submit" class="btn btn-secondary" id="create">Agregar</button>
-                                    <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
-                            </form>
-                        </div>
+                                <button type="submit" class="btn btn-secondary" id="create">Guardar</button>
+                                <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
+                        </form>
                     </div>
                 </div>
             </div>
+        </div>
+
+
 
 
         </div>
 
+        <div>
+            <label>Buscar:</label>
+            <input class="form-control me-2 light-table-filter" data-table="table" type="text">
+        </div>
         <div class="container">
             <table class="table table-responsive-sm">
                 <thead>
                     <tr id="records"></tr>
                     <tr>
-                        <th scope="col">#</th>
+                        <th scope="col">Id</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Apellido</th>
                         <th scope="col">Correo</th>
@@ -309,6 +306,11 @@
     <script src="../../controllers/dashboard/usuarios.js"></script>
     <script type="text/javascript" src="../../resources/js/sweetalert.min.js"></script>
     <script src="../../controllers/components.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
