--- a/views/private/agregar_usuarios.html
+++ b/views/private/agregar_usuarios.html
@@ -23,16 +23,9 @@
     <header>
         
     </header>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
 
-    <section>
+    <main>
         <div class="container">
 
         <!-- Button trigger modal -->
@@ -106,7 +99,7 @@
             </table>
         </div>
 
-    </section>
+    </main>
 
 
     <br>
