crud de productos
no le sirve la imagen pero todo bien

--- a/views/private/agregar_subcategorias.html
+++ b/views/private/agregar_subcategorias.html
@@ -64,6 +64,7 @@
                                     <input class="form-control" id="archivo" type="file" name="archivo" accept=".jpg, .png" multiple />
                                 </div>
                                 <div class="mb-3">
+                                    <label for="message-text" class="col-form-label">categoria</label>
                                     <select class="form-select" id="categoria" name="categoria">
                                     </select>
                                 </div>
