--- a/views/private/agregar_productos.html
+++ b/views/private/agregar_productos.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="../../resources/css/estilo.css">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../resources/css/estilo.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
     <title>Agregar Productos</title>
 </head>
+
 <body>
     <header>
 
     </header>
-    
     <main>
         <div class="container">
             <H4>Agregar Productos</H4>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target=".exampleModal">
+            <button onclick="openCreate()" type="button" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target=".exampleModal">
                 Agregar
             </button>
-
             <!-- Modal -->
-
-            <div  class="modal exampleModal " id="save-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal exampleModal " id="save-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -34,50 +34,59 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <form>
+                            <form id="save-form">
                                 <input class="visually-hidden" type="number" id="id" name="id">
                                 <div class="mb-3">
                                     <p>Seleccione una SubCategoria</p>
-                                    <select class="form-select" aria-label="Seleccione Categoria" id="subcategoria" name="subcategoria">
+                                    <select class="form-select" aria-label="Seleccione subcategoria" id="subcategoria"
+                                        name="subcategoria">
                                     </select>
                                 </div>
                                 <div class="mb-3">
                                     <p>Seleccione un usuario</p>
-                                    <select class="form-select" aria-label="Seleccione Categoria" id="usuario" name="usuario">
+                                    <select class="form-select" aria-label="Seleccione un usuario" id="usuario"
+                                        name="usuario">
                                     </select>
                                 </div>
                                 <div class="mb-3">
                                     <label for="recipient-name" class="col-form-label">Nombre:</label>
-                                    <input type="text" class="form-control" id="nombre">
+                                    <input type="text" class="form-control" id="nombre" name="nombre">
                                 </div>
                                 <div class="mb-3">
                                     <label for="message-text" class="col-form-label">Descripcion:</label>
-                                    <textarea class="form-control" id="descripcion"></textarea>
+                                    <textarea class="form-control" id="descripcion" name="descripcion"></textarea>
                                 </div>
                                 <p>Precio del producto:</p>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text">$</span>
-                                    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" id="precio">
+                                    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
+                                        id="precio" name="precio">
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="formFileMultiple" class="form-label">Seleccione una imagen</label>
-                                    <input class="form-control" type="file" id="formFileMultiple imagen" multiple />
+                                    <input class="form-control" id="archivo" type="file" name="archivo"
+                                        accept=".jpg, .png" multiple />
                                 </div>
                                 <div class="mb-3">
                                     <p>Estado del producto</p>
-                                    <select class="form-select" aria-label="Seleccione Categoria" id="estado">
-                                    </select>
+                                    <!-- Default switch -->
+                                    <div class="form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" role="switch"
+                                            id="estados" name="estados"/>
+                                        <label class="form-check-label" for="flexSwitchCheckDefault">Disponible/ No disponible</label>
+                                    </div>
                                 </div>
                                 <div class="mb-3">
                                     <p>Existencias de producto</p>
-                                    <input  type="number" id="existencia" name="existencia">
+                                    <input type="number" id="existencia" name="existencia">
                                 </div>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                <button type="submit" class="btn btn-primary" id="create">Guardar</button>
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="submit" class="btn btn-primary">Guardar</button>
+
                         </div>
                     </div>
                 </div>
@@ -90,7 +99,6 @@
                 <thead>
                     <tr id="records"></tr>
                     <tr>
-                        <th scope="col">#</th>
                         <th scope="col">Subcategoria</th>
                         <th scope="col">Usuario</th>
                         <th scope="col">Nombre</th>
@@ -111,12 +119,15 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
-<script type="text/javascript" src="../../resources/js/sweetalert.min.js"></script>
-<script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
-<script src="../../controllers/components.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+    <script type="text/javascript" src="../../resources/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
+    <script src="../../controllers/components.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/producto.js"></script>
+
 
 </body>
+
 </html>
