--- a/views/private/clientes.html
+++ b/views/private/clientes.html
@@ -38,24 +38,24 @@
                                 <input class="visually-hidden" type="number" id="id" name="id">
                                 <input class="visually-hidden" type="text" id="clave" name="clave">
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Nombre:</label>
-                                    <input type="text" class="form-control" id="nombre" name="nombre">
+                                    
+                                    <input type="text" class="visually-hidden" id="nombre" name="nombre">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Apellido:</label>
-                                    <input type="text" class="form-control" id="apellido" name="apellido">
+                                   
+                                    <input type="text" class="visually-hidden" id="apellido" name="apellido">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Dui:</label>
-                                    <input type="text" class="form-control" id="dui" name="dui">
+                                    
+                                    <input type="text"class="visually-hidden" id="dui" name="dui">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="message-text" class="col-form-label">Correo:</label>
-                                    <input type="text" class="form-control" id="correo" name="correo" required>
+                                    
+                                    <input type="text" class="visually-hidden" id="correo" name="correo" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="message-text" class="col-form-label">Direccion:</label>
-                                    <textarea class="form-control" id="direccion" name="direccion"></textarea>
+                                    
+                                    <textarea class="visually-hidden" id="direccion" name="direccion"></textarea>
                                 </div>
                                 <div class="mb-3">
                                     <p>Estado del cliente:</p>
@@ -68,8 +68,8 @@
                                     </div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="message-text" class="col-form-label">Telefono:</label>
-                                    <input type="text" class="form-control" id="telefono" name="telefono" required>
+                                   
+                                    <input type="text" class="visually-hidden" id="telefono" name="telefono" required>
                                 </div>
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                 <button type="submit" class="btn btn-primary" id="create">Guardar</button>
