--- a/views/private/pedidos.html
+++ b/views/private/pedidos.html
@@ -41,8 +41,8 @@
                         <div class="modal-body">
                             <form id="save-form">
                                 <input class="visually-hidden" type="number" id="id_pedido" name="id_pedido">
-                                <div class="mb-3">
-                                    <label for="recipient-name" class="col-form-label">Cliente:</label>
+                                <div class="visually-hidden mb-3">
+                                    <label for="recipient-name" class=" col-form-label">Cliente:</label>
                                     <input type="text" class="validate" id="nombre_cliente" name="nombre_cliente" required>
                                 </div>
                                 <div class="mb-3">
@@ -54,15 +54,15 @@
                                         <label class="form-check-label" for="flexSwitchCheckDefault"> No Disponible/ Disponible</label>
                                     </div>
                                 </div>
-                                <div class="mb-3">
+                                <div class="visually-hidden mb-3">
                                     <label for="recipient-name" class="col-form-label">Fecha pedido:</label>
                                     <input type="text" class="validate" id="fecha_pedido" name="fecha_pedido" required>
                                 </div>
-                                <div class="mb-3">
+                                <div class="visually-hidden mb-3">
                                     <label for="recipient-name" class="col-form-label">Dirección:</label>
-                                    <input type="text" class="validate" id="direccion" name="direccion" required>
+                                    <input type="text" class=" validate" id="direccion" name="direccion" required>
                                 </div>
-                                <button type="submit" class="btn btn-secondary" id="create">Agregar</button>
+                                <button type="submit" class="btn btn-secondary" id="create">Guardar</button>
                                 <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
                             </form>
 
